--- a/index.html
+++ b/index.html
@@ -38,4 +38,4 @@
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 		<script src="app.js"></script>
 	</body>
-</htm>
+</html>
